--- a/src/pages/Cart/styles.scss
+++ b/src/pages/Cart/styles.scss
@@ -41,7 +41,8 @@
           justify-content: center;
           align-items: center;
           gap: 16px;
-          margin-left: -60px;
+          margin-left: -80px;
+          width: 200px;
 
           img {
             height: 80px;
@@ -89,6 +90,7 @@
           justify-content: space-around;
           align-items: flex-end;
           gap: 8px;
+          text-align: left;
 
           p {
             color: #616161;
