--- a/src/components/CardItem/styles.scss
+++ b/src/components/CardItem/styles.scss
@@ -9,6 +9,20 @@
 
   transition: 0.3s;
 
+  max-width: 350px;
+
+  @media (max-width: 1100px) {
+    max-width: 700px;
+  }
+
+  
+
+  @media (max-width: 400px) {
+    max-width: 320px;
+  padding: 8px;
+    
+  }
+
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 8px;
   }
