--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -3,10 +3,9 @@
 
   main {
     text-align: center;
-
     .products-header {
       max-width: 1100px;
-      margin: 40px auto;
+      margin: 40px 20px;
       display: flex;
       justify-content: space-between;
 
@@ -21,7 +20,6 @@
       }
     }
 
-    height: 1px;
     .products {
       margin: 0 auto;
       max-width: 1100px;
@@ -30,6 +28,18 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 16px;
+
+
+      @media(max-width: 1100px){
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 700px;
+      }
+
+      @media(max-width: 750px){
+        grid-template-columns: repeat(1, 1fr);
+        max-width: 400px;
+      }
+
     }
   }
 }
