--- a/src/pages/Cart/styles.scss
+++ b/src/pages/Cart/styles.scss
@@ -2,121 +2,100 @@
   width: 100vw;
 
   main {
+    width: min(90vw);
+    margin: 0 auto;
     h1 {
       text-align: center;
       margin: 50px 0;
     }
 
-    .cart-items {
-      max-width: 1100px;
-      margin: 0 auto;
+    #data-table {
+      display: block;
+      width: 100%;
+      border-spacing: 0 0.5rem;
+      color: #969cb3;
       overflow-x: auto;
+    }
 
-      
-      .cart-title {
-        display: flex;
-        justify-content: space-around;
-        padding: 16px;
-        border-top: 1px solid #e0e0e0;
-        border-bottom: 1px solid #e0e0e0;
+    table thead tr th:first-child,
+    table tbody tr td:first-child {
+      border-radius: 0.25rem 0 0 0.25rem;
+    }
 
-        p {
-          color: #616161;
-        }
+    table thead tr th:last-child,
+    table tbody tr td:last-child {
+      border-radius: 0 0.25rem 0.25rem 0;
+    }
+
+    table thead th {
+      width: 33%;
+      background: #f1f1f1;
+      font-weight: normal;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+
+    table tbody tr {
+      opacity: 0.7;
+      text-align: center;
+    }
+
+    table tbody tr:hover {
+      opacity: 1;
+    }
+
+    table tbody td {
+      background: #fff;
+      padding: 1rem 2rem;
+    }
+   
+  }
+
+  .checkout-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    a {
+      font-size: 16px;
+      color: #616161;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      &:hover {
+        border-radius: 50%;
+        filter: brightness(0.9);
+      }
+    }
+
+    .checkout {
+      width: min(90vw);
+
+      margin-top: 16px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-end;
+      gap: 8px;
+
+      p {
+        color: #616161;
       }
 
-      .cart-item {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        border-bottom: 1px solid #e0e0e0;
+      button {
+        margin-top: 8px;
+        border: 0;
+        cursor: pointer;
+        height: 50px;
+        width: 200px;
         padding: 16px;
+        border-radius: 8px;
+        background: #43a047;
+        transition: filter 0.2ms;
+        color: #fff;
 
-        p {
-          color: #616161;
-        }
-
-        .cart-item-header {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          gap: 16px;
-          margin-left: -80px;
-          width: 200px;
-
-          img {
-            height: 80px;
-            width: 80px;
-          }
-        }
-
-        .delete-button {
-          border: 0;
-          background: #fff;
-          cursor: pointer;
-          height: 50px;
-          width: 50px;
-          &:hover {
-            border-radius: 50%;
-            filter: brightness(0.9);
-          }
-
-          .delete-icon {
-            height: 25px;
-            width: 25px;
-            color: #616161;
-          }
-        }
-      }
-
-      .checkout-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        a {
-          font-size: 16px;
-          color: #616161;
-          text-decoration: none;
-          display: flex;
-          align-items: center;
-          gap: 8px;
-          &:hover {
-            border-radius: 50%;
-            filter: brightness(0.9);
-          }
-        }
-
-        .checkout {
-          margin-top: 16px;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          align-items: flex-end;
-          gap: 8px;
-          text-align: left;
-
-          p {
-            color: #616161;
-          }
-
-          button {
-            margin-top: 8px;
-            border: 0;
-            cursor: pointer;
-            height: 50px;
-            width: 200px;
-            padding: 16px;
-            border-radius: 8px;
-            background: #43a047;
-            transition: filter 0.2ms;
-            color: #fff;
-
-            &:hover {
-              filter: brightness(0.9);
-            }
-          }
+        &:hover {
+          filter: brightness(0.9);
         }
       }
     }
