adding prettier and eslint

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,10 @@ body {
   width: 100vw;
 }
 
-body, input, button, select, textarea {
+body,
+input,
+button,
+select,
+textarea {
   font: 400 16px 'Roboto', sans-serif;
 }
